--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,119 @@
-.App {
-  background-color: gray;
+
+html {
+  overflow: hidden;
+}
+
+
+.canvas {
+  cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><circle cx="12" cy="12" r="10"/></svg>') 12 12, auto;
+  user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.header {
+  background-color: #f5cd4b;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  height: 60px;
+  border-bottom: 5px solid #d9d9d9;
+  padding: 0 50px;
+}
+.logo {
+  color: #937b2d;
+}
+.container {
+  position: relative;
+}
+.buttons {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  bottom: 2vh;
+  left: 3vw;
+}
+button {
+  border: none;
+  background-color: #f5cd4b;
+  color: black;
+  border-radius: 50%;
+  width: 5vw;
+  height: 5vw;
+  font-size: 3vw;
+  margin-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 50px;
+}
+
+button:hover {
+  border: 5px solid #f5cd4b;
+  color: #f5cd4b;
+  background-color: white;
+  cursor: pointer;
+}
+
+
+
+.canvas {
+  background-color: white;
+
+}
+
+
+
+
+
+
+
+
+
+/* reset */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
